Page popups can show up at wrong locations https://bugs.webkit.org/show_bug.cgi?id=93556

Reviewed by Kent Tamura.

Source/WebCore:

No new tests. Cannot test popup position.

* html/shadow/CalendarPickerElement.cpp:
(WebCore::CalendarPickerElement::contentSize):

Source/WebKit/chromium:

We were showing the popup at wrong positions. When there isn't enough
room below and above the element it adjusts the position but we weren't
resetting the adjustment when we resize the popup. This patch will make
the popup adjust the popup position each time we resize.

* src/ColorChooserUIController.cpp:
(WebKit::ColorChooserUIController::contentSize):
* src/WebPagePopupImpl.cpp:
(WevKit::PagePopupChromeClient::setWindowRect):
(WebKit::WebPagePopupImpl::init): Use reposition().
(WebKit::WebPagePopupImpl::reposition): Repositions the page popup based on the popup size.
(WebKit):
(WebKit::WebPagePopupImpl::resize): Use reposition().
* src/WebPagePopupImpl.h:
(WebPagePopupImpl):


Canonical link: https://commits.webkit.org/111458@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125169 268f45cc-cd09-0410-ab3c-d52691b4dbfc